2010-06-10 Pierre Wieser <pwieser@trychlos.org>

	* Changelog: Update NEWS before release.

	* configure.ac: Bump pre-release version number.

	* src/core/na-iabout.c: Update copyright notice.

2010-06-04 Pierre Wieser <pwieser@trychlos.org>

	* src/nact/nact-imimetypes-tab.c: 
	Take advantage of new nact_match_list_xxx functions.

	* src/nact/nact-match-list.c:
	* src/nact/nact-match-list.h: New files.

	* src/nact/Makefile.am: Updated accordingly.

	* src/nact/base-window.c:
	* src/nact/base-window.h (base_window_signal_connect_with_data):
	New function.

	* src/nact/nact-ibasenames-tab.c: 
	Take advantage of new nact_match_list_xxx functions.

2010-06-03 Pierre Wieser <pwieser@trychlos.org>

	* src/nact/nact-ibasenames-tab.c: Implement NactIBasenamesInterface interface.

2010-06-02 Pierre Wieser <pwieser@trychlos.org>

	* src/nact/nautilus-actions-config-tool.ui:
	* src/nact/nact-ibasenames-tab.c: Define basename new conditions skeleton.

	* src/nact/nact-icapabilities-tab.c:
	* src/nact/nact-icapabilities-tab.h: Define NactICapabilitiesInterface interface.

	* src/nact/Makefile.am:
	* src/nact/nact-main-tab.h:
	* src/nact/nact-main-window.c: Updated accordingly.

2010-05-30 Pierre Wieser <pwieser@trychlos.org>

	* src/nact/nact-ibasenames-tab.c:
	* src/nact/nact-ibasenames-tab.h: Define NactIBasenamesTabInterface interface.

	* src/nact/nact-icommand-tab.c:
	No more include removed	nact-iconditions-tab.h file.

	* src/nact/nact-ienvironment-tab.c:
	* src/nact/nact-ienvironment-tab.h: Define NactIEnvironmentTabInterface interface.

	* src/nact/nact-iexecution-tab.c:
	* src/nact/nact-iexecution-tab.h: Define NactIExecutionTabInterface interface.

	* src/nact/nact-ifolders-tab.c (on_tab_updatable_selection_changed):
	* src/nact/nact-ischemes-tab.c (on_tab_updatable_selection_changed):
	tab_set_sensitive() returned value is not used here.

	* src/nact/nact-imimetypes-tab.c:
	* src/nact/nact-imimetypes-tab.h: Define NactIMimetypesTabInterface interface.
