@@ -154,6 +154,29 @@ static NADataDef data_def_profile [] = {
 				NULL,
 				N_( "<STRING>" ) },
 
+	{ NAFO_DATA_WORKING_DIR,
+				TRUE,
+				TRUE,
+				TRUE,
+				N_( "Working directory" ),
+				N_( "The working directory the command will be started in.\n" \
+					"Defaults to \"%d\"." ),
+				NAFD_TYPE_STRING,
+				"%d",
+				FALSE,
+				TRUE,
+				TRUE,
+				FALSE,
+				FALSE,
+				"working-dir",
+				"Path",
+				0,
+				NULL,
+				0,
+				0,
+				NULL,
+				NULL },
+
 	{ NAFO_DATA_EXECUTION_MODE,
 				TRUE,
 				TRUE,
